--- a/views/groupin/hub.handlebars
+++ b/views/groupin/hub.handlebars
@@ -5,11 +5,7 @@
             <label for="newGroup">Group Name:</label>
             <input id="newGroup" type="text" name="groupName"/>
         </div>
-        {{!--<div>
-            <h3>First Media</h3>
-            <label>Starting Media:</label>
-            <input type="text" name="startMedia"/>
-        </div>--}}
+        <input type="submit">
     </form>
 
     <p id="listOfMediaLists"></p>
