--- a/views/groupin/hub.handlebars
+++ b/views/groupin/hub.handlebars
@@ -8,5 +8,8 @@
         <input type="submit">
     </form>
 
-    <p id="listOfMediaLists"></p>
+    <div>
+        <p>{{username}}></p>
+        {{#list mediaList}}{{_id}}{{/list}}
+    </div>
 </div>
