Comments out list method for now

--- a/views/groupin/hub.handlebars
+++ b/views/groupin/hub.handlebars
@@ -9,7 +9,7 @@
     </form>
 
     <div>
-        <p>{{username}}></p>
-        {{#list mediaList}}{{_id}}{{/list}}
+        <p>Welcome, {{username}}!</p>
+        {{!-- {#list mediaList}}{{_id}} --}}
     </div>
 </div>
