fixed handlebars hub list

--- a/views/groupin/hub.handlebars
+++ b/views/groupin/hub.handlebars
@@ -11,6 +11,8 @@
 
     <div>
         <p>Welcome, {{username}}!</p>
-        {{!-- {#list mediaList}}{{_id}} --}}
+        {{#if mediaList}}
+            {{#list mediaList}}{{_id}}{{/list}}
+        {{/if}}
     </div>
 </div>
