--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,7 @@
 h1 {
-	color: #112;
+	color: darkgreen;
 	font-family: 'Helvetica Neue', sans-serif; 
-	font-size: 275px;
+	font-size: 100px;
 	font-weight: bold; 
 	letter-spacing: -1px; 
 	line-height: 1; 
@@ -10,9 +10,9 @@ h1 {
 
 
 h2 { 
-	color: #112; 
+	color: #110; 
 	font-family: 'Open Sans', sans-serif; 
-	font-size: 30px; 
+	font-size: 20px; 
 	font-weight: 300; 
 	line-height: 32px; 
 	margin: 0 0 72px; 
