--- a/views/groupin/hub.handlebars
+++ b/views/groupin/hub.handlebars
@@ -12,7 +12,7 @@
     <div>
         <p>Welcome, {{username}}!</p>
         {{#if mediaList}}
-            {{#list mediaList}}{{_id}}{{/list}}
+            {{#list mediaList}}{{name}}{{/list}}
         {{/if}}
     </div>
 </div>
