--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,8 @@
 h1 {
 	color: darkgreen;
 	font-family: 'Helvetica Neue', sans-serif; 
-	font-size: 100px;
-	font-weight: bold; 
+	font-size: 120px;
+	font-weight: 900; 
 	letter-spacing: -1px; 
 	line-height: 1; 
 	text-align: center;
