Updates hub to use links

--- a/views/groupin/hub.handlebars
+++ b/views/groupin/hub.handlebars
@@ -12,7 +12,9 @@
     <div>
         <p>Welcome, {{username}}!</p>
         {{#if mediaList}}
-            {{#list mediaList}}{{name}}{{/list}}
+            {{#list mediaList}}
+                <a href="/medialist/{{_id}}">{{name}}</a>
+            {{/list}}
         {{/if}}
     </div>
 </div>
