Adds name to form input

--- a/views/groupin/mediaList.handlebars
+++ b/views/groupin/mediaList.handlebars
@@ -28,7 +28,7 @@
         <h3>Add Member</h3>
         <div>
             <label for="newMember">Member ID:</label>
-            <input id="newMember" type="text" placeholder="ID of member to be added"/>
+            <input id="newMember" type="text" placeholder="ID of member to be added" name="newMember"/>
         </div>
         <input type="submit">
     </form>
