Add link to home

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,9 @@
 
 <body>
     <header>
+        <ul id="home">
+            <li><a href="http://localhost:3000/hub">Hub</a></li>
+        </ul>
         <h1>GroupIn</h1>
     </header>
 
