--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,9 +9,10 @@
 
 <body>
     <header>
-        <ul id="home">
-            <li><a href="http://localhost:3000/hub">Hub</a></li>
-        </ul>
+        <nav id="home">
+            <button onclick="location.href='http://localhost:3000/hub'">Hub</button>
+            <button onclick="location.href='http://localhost:3000/logout'">Log out</button>
+        </nav>
         <h1>GroupIn</h1>
     </header>
 
