--- a/views/groupin/mediaList.handlebars
+++ b/views/groupin/mediaList.handlebars
@@ -2,7 +2,9 @@
     <h2>Media List</h2>
     <div id="listOfMedia">
         <p>Creator: {{mediaList.creator}}</p>
-        {{#list mediaList.media}}{{title}}{{/list}}
+        {{#list mediaList.media}}
+            {{title}}<a href="/medialist/{{mediaList._id}}/{{title}}/remove">👎</a>
+        {{/list}}
     </div>
     <form method="POST" action="/medialist/{{mediaList._id}}/addMedia">
         <h3>Add Media to List</h3>
