--- a/views/authenticate/login-signup.handlebars
+++ b/views/authenticate/login-signup.handlebars
@@ -14,6 +14,7 @@
     <div>
         <input class="submit-button" type="submit" value="LOGIN">
     </div>
+    <p class="message">Don't have a login? <a href="#">Create an account</a></p>
 </form>
 
 {{#if error}}
@@ -38,7 +39,15 @@
     <div>
         <input class="submit-button" type="submit" value="SIGN UP">
     </div>
+    <p class="message">Have an account? <a href="#">Login</a></p>
 </form>
 
 </div>
 </section>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script>
+    $('.message a').click(function(){
+   $('form').animate({height: "toggle", opacity: "toggle"}, "slow");
+});
+</script>
