--- a/views/groupin/mediaList.handlebars
+++ b/views/groupin/mediaList.handlebars
@@ -5,8 +5,8 @@
         <a href="/medialist/{{mediaList._id}}/progress">Progress</a>
         {{#list mediaList.media}}
             {{title}}
-            <a href="/medialist/{{mediaList._id}}/{{_id}}/skip">👎</a>
-            <a href="/medialist/{{mediaList._id}}/{{_id}}/watched">👀</a>
+            <a href="/medialist/media/{{_id}}/skip">👎</a>
+            <a href="/medialist/media/{{_id}}/watched">👀</a>
         {{/list}}
     </div>
     <form method="POST" action="/medialist/{{mediaList._id}}/addMedia">
