--- a/views/groupin/mediaList.handlebars
+++ b/views/groupin/mediaList.handlebars
@@ -3,11 +3,11 @@
     <div id="listOfMedia">
         <p>Creator: {{mediaList.creator}}</p>
         <a href="/medialist/{{mediaList._id}}/progress">Progress: {{progress}}</a>
-        {{#list mediaList.media}}
+        {{#list_media mediaList.media}}
             {{title}}
             <a href="/medialist/media/{{_id}}/skip">👎</a>
             <a href="/medialist/media/{{_id}}/watched">👀</a>
-        {{/list}}
+        {{/list_media}}
     </div>
     <form method="POST" action="/medialist/{{mediaList._id}}/addMedia">
         <h3>Add Media to List</h3>
