--- a/views/authenticate/login-signup.handlebars
+++ b/views/authenticate/login-signup.handlebars
@@ -40,16 +40,17 @@
     <div>
         <input class="submit-button" type="submit" value="SIGN UP">
     </div>
-    {{#if error}}
-    <div id="error-container">
-        <div>Error: </div>
-        <div>
-            {{error}}
-        </div>
-    </div>
-    {{/if}}
     <p class="message">Have an account? <a href="#">Login</a></p>
+    {{#if signup_error}}
+        <div id="error-container">
+            <div>Error: </div>
+            <div>
+                {{signup_error}}
+            </div>
+        </div>
+    {{/if}}
 </form>
+
 
 </div>
 </section>
@@ -58,4 +59,7 @@
     $('.message a').click(function(){
    $('form').animate({height: "toggle", opacity: "toggle"}, "slow");
 });
+    if(window.location.hash){
+        $('form').animate({height: "toggle", opacity: "toggle"}, 0);
+    }
 </script>
