--- a/views/groupin/hub.handlebars
+++ b/views/groupin/hub.handlebars
@@ -18,5 +18,13 @@
         <div>
             <input class="submit-button" type="submit" value="CREATE">
         </div>
+        {{#if errors}}
+        <div id="error-container">
+            <div>Error: </div>
+            <div>
+                {{errors}}
+            </div>
+        </div>
+        {{/if}}
     </form>
 </div>
