--- a/views/groupin/hub.handlebars
+++ b/views/groupin/hub.handlebars
@@ -19,7 +19,7 @@
             <input class="submit-button" type="submit" value="CREATE">
         </div>
         {{#if errors}}
-        <div id="error-container">
+        <div class="error-container">
             <div>Error: </div>
             <div>
                 {{errors}}
