--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,8 +11,8 @@
 <body>
     <header>
         <nav id="home">
-            <button onclick="location.href='http://localhost:3000/hub'">Hub</button>
-            <button onclick="location.href='http://localhost:3000/logout'">Log out</button>
+            <a href="http://localhost:3000/logout">Log out</a>
+            <a href="http://localhost:3000/hub">Hub</a>
         </nav>
         <h1>GroupIn</h1>
     </header>
