Adds ajax to progress update

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -164,3 +164,11 @@ p {
 #home a:active, a:focus {
   color: #00DD00;
 }
+
+#progress_content {
+    display: inline;
+}
+
+#progress {
+    cursor: pointer;
+}
