--- a/views/groupin/mediaList.handlebars
+++ b/views/groupin/mediaList.handlebars
@@ -2,7 +2,9 @@
     <h2>Media List</h2>
     <div id="listOfMedia">
         <p>Creator: {{mediaList.creator}}</p>
-        <a href="/medialist/{{mediaList._id}}/progress">Progress: {{progress}}</a>
+        <div id="progress">
+            <a onclick="updateProgress()">Progress: <div id="progress_content">{{progress}}</div> ▲</a>
+        </div>
         {{#list_media mediaList.media}}
             {{title}}
             <a class="vote-button" href="/medialist/media/{{_id}}/skip">👎 (skip)</a>
@@ -52,4 +54,5 @@
             </ul>
         </div>
     {{/if}}
+    <script src="/public/js/medialist.js"></script>
 </div>
